# SSL4EO-S12

./: .gitignore  README.md  pyproject.toml
src/benchmark/pretrain_ssl/: pretrain_dino_s2c.py
src/benchmark/pretrain_ssl/models/: cv_transforms.py
src/benchmark/pretrain_ssl/models/data2vec/: pyproject.toml
src/benchmark/pretrain_ssl/models/dino/: objectives.py  utils.py  vision_transformer.py
src/benchmark/pretrain_ssl/scripts/pretrain/: limited_restart_dino_v3_vits16.sh  restart_dino_v3_vits16_torchrun.sh  smoke_train_dino_v3.sh  srun_train_dino_rn50_s2c.sh  srun_train_dino_vits16_s2c.sh
src/benchmark/pretrain_ssl/tests/: test_dino_objectives.py
src/benchmark/transfer_classification/: linear_BE_dino.py  linear_EU_dino.py  linear_SS_dino.py
src/benchmark/transfer_classification/models/data2vec/: pyproject.toml
src/benchmark/transfer_classification/models/dino/: utils.py  vision_transformer.py
src/benchmark/transfer_classification/scripts/benchmark/: lc_dinov3_vits16_s2c_BE.sh  lc_dinov3_vits16_s2c_EU.sh  lc_dinov3_vits16_s2c_SS.sh
